--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "axios-mock-adapter": "^1.18.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -43,9 +44,10 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.9.0",
+    "@testing-library/react": "^9.5.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "@testing-library/react": "^9.5.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
@@ -55,7 +57,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "jest": "^26.0.1",
+    "jest": "24.9.0",
     "redux-mock-store": "^1.5.4"
   },
   "jest": {
